--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -43,6 +43,11 @@
  <p>
 State Board of Technical Education, Telangana successfully conducted Diploma / Polytechnic Courses (C-16, C-14, C-09, & ER- 91Pharmacy) Regular and Backlogs Examinations in the months of March/April  2017 examinations for C09, C16 & ER 91 schemes Commencement of theory examinations for C14 schemes 23-03-2017 (Thursday) 06-04-2017 (Thursday) at different exam centers across the AP. A large number of Students appeared for the SBTET examination. All the candidates who had appeared for the exam are eagerly waiting for the sbtet diploma results. Now, the wait is over, TS SBTET is going to be declare sbtet results C16, C14, 09 1st  year, 3rd  sem, 4th  sem, 5th  sem, 6th sem and 7th Semester very soon. Candidates can check the results from the direct link provided below and fill Form and get direct results through Mail and sms.
 </p>
+
+<br>
+<div class="text-center" '>
+<h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div>
+<br>
         <div class="text-center">
 
            
@@ -127,9 +132,9 @@ State Board of Technical Education, Telangana successfully conducted Diploma / P
     <p>State Board of Technical Education and Training Telangana (SBTET TS)  will soon declare Dipoma (Polytechnic) Exams results in 2017. TS SBTET Board Polytechnic Results 2017 will be available at sbtetworld.in, indiaresults.com, manabadi.co.in, and schools9.com. Candidates can check SBTET Result 2017 live by visiting our website at result announcement time. And at results news sites are also provides the best information for the SBTET DIPLOMA UPDATES AND REULTS is SBTET WORLD, And TS SBTET Results 2017 Provided (Officially) Released Sites are www.sbtet.telangana.gov.in,  Sbtetworld.in, indiaresults.com, School9,Etc. Below Links checking of Result.</p>
 
 <br>
-<h4><a href="/ts-tssbtet-results">Links TS SBTET Diploma results March/April 2017 will be Update Once Results Released<br><br>
+<h4><a href="/ts-tssbtet-results">Links TS SBTET Diploma results March/April 2017 will be Update Once Results Released 
 <u>Check Out Your Results Are Going To Be Released By TS SBTET</u> <span class="text-danger">(Links Not Yet Updated)</span></a></h4>
-
+<br>
 <div class="text-center">
 <b>
 <a href="/ap-apsbtet-results">TS SBTET C-16 Diploma Results March/April 2017</a><br>
