--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -19,6 +19,7 @@
             <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ap-apsbtet-results" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
 </div><!-- /.social-share -->
 <br>
+
         
        <p><b class="text-success">AP SBTET Results 2017:</b> State Board of Technical Education and Training, Andhra Pradesh State (AP SBTET) The state boards of technical education & training of Andhra Pradesh conducts the diploma examinations twice in a year. These examinations are conducts in summer like March/April and winter exams are conducts in Oct/Nov respectively.’ The Director of Public Instruction (D.P.I.) used to head the Technical Education also at the time of formation of Andhra Pradesh. To help speed up the process of development of Technical Education, a Board in the name and style of "STATE BOARD OF TECHNICAL EDUCATION AND TRAINING", Government of Andhra Pradesh. The AP SBTET is responsible for conducting the Diploma/Polytechnic Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 Examinations and some minor examinations in the state of Andhra Pradesh. This year More than 1.5 Lakhs students appeared for the ‘sbtet‘ examination. Every year Semester Board conducts SBTET exams in a very professional way and tries to evaluate the papers in 45-50 Days from the completion date of exams. This year Andhra Pradesh SBTET Results 2017 expected in the month of May. However, the decision will be taken by AP SBTET board soon and will release a press note, which will be published on this website.
        </p>
@@ -41,6 +42,11 @@
  <p>
 State Board of Technical Education, Andhra Pradesh successfully conducted Diploma / Polytechnic Courses (C-16, C-14, C-09, & ER- 91Pharmacy) Regular and Backlogs Examinations in the months of March/April  2017 examinations for C09, C16 & ER 91 schemes Commencement of theory examinations for C14 schemes 23-03-2017 (Thursday) 06-04-2017 (Thursday) at different exam centers across the AP. A large number of Students appeared for the SBTET examination. All the candidates who had appeared for the exam are eagerly waiting for the sbtet diploma results. Now, the wait is over, AP SBTET is going to be declare sbtet results C16, C14, 09 1st  year, 3rd  sem, 4th  sem, 5th  sem, 6th sem and 7th Semester very soon. Candidates can check the results from the direct link provided below and fill Form and get direct results through Mail and sms.
 </p>
+
+<br>
+<div class="text-center" '>
+<h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div>
+<br>
         <div class="text-center">
 
            
@@ -125,7 +131,7 @@ State Board of Technical Education and Training Andhra Pradesh (SBTET AP)  will 
 <br>
 <h4><a href="/ap-apsbtet-results">Links AP SBTET Diploma results March/April 2017 will be Update Once Results Released
 Check Out Your Results Are Going To Be Released By AP SBTET <span class="text-danger">(Links Not Yet Updated)</span></a></h4>
-
+<br>
 <div class="text-center">
 <b>
 <a href="/ap-apsbtet-results">AP SBTET C-16 Diploma Results March/April 2017</a><br>
