--- a/app/views/blogs/ecettips.html.erb
+++ b/app/views/blogs/ecettips.html.erb
@@ -1,8 +1,21 @@
-<% content_for :title, "ECET-SYLLABUS-WEIGHTAGE-MARKS-TIPS" %>
-<div class="container">
+<% content_for :title, "ECET SYLLABUS WEIGHTAGE MARKS TIPS" %>
+<style>
+
+div.double {border-style: double;}
+</style>
+
+<div class="container double">
 
 	
   <div class="text-justify">
+  <div class="text-center" '>
+<h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div>
+<div class=" text-center">
+     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:100px'></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+</div>
+<br>
  	<h1 class="text-center text-success">Tips for Ecet 2017 Examination</h1>
 
  <h2 class="text-success"><u>Here we are providing some simple tips for Ecet examination:-</u></h2>
@@ -21,9 +34,9 @@
 
  <li>As well as M.P.C (Mathematics, Physics & Chemistry) common to all respective departments.</li>
 </ol>
-Syllabus of Various Departments<br>
-</b>
 
+</b>
+<br>
 <b><h2 class="text-center text-success">CIVIL ENGINEERING</h2>
  ANNEXURE I<br> 
 STRENGTH OF MATERIALS </b>
@@ -111,8 +124,8 @@ Number of Questions to be set</b>
 </tr>
 
 </table>
-
-<b><h2 class="text-center">MECHANICAL ENGINEERING</h2>
+<br>
+<b><h2 class="text-center text-success">MECHANICAL ENGINEERING</h2>
  ANNEXURE I<br></b>
 <p><b>Unit I: Workshop Technology</b><br>Basic Workshop tools and Operations (carpentry, fitting and sheet metal) Metrology – liner, angular and surface measurement – comparators, Transducers (Mechanical, Resistance and Capacitive). 
 Working and operations of lathe, Drilling, Shaper, slotter, Planner, milling machines – Capstan and turret lathes – copying lathes – surface finishing operations – Honing, lapping, super finishing, electro plating, metal spraying. 
@@ -688,6 +701,9 @@ Rubber – natural rubber – processing from latex –Vulcanization – Elastom
 </tr>
 
 </table>
+
+<div class="text-center" '>
+<h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div>
 
 </div>
 </div>
