--- a/app/views/blogs/ecettips.html.erb
+++ b/app/views/blogs/ecettips.html.erb
@@ -8,7 +8,7 @@ div.double {border-style: double;}
 
 	
   <div class="text-justify">
-  <div class="text-center" '>
+  <div class="text-center" '><br>
 <h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div>
 <div class=" text-center">
      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
