--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,8 +12,12 @@
           <%= alert %>
         </div>
 <% end %>
-
+<h3 class="text-center"><a href='http://www.neetgov.in/ecet-syllabus-weightage-marks-tips'>ECET SYLLABUS WEIGHTAGE MARKS TIPS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3>
   <div class="row text-center">
+  <div class="col-sm-2"><h3 class="text-center"><img border='0' src='https://4.bp.blogspot.com/-_LyKpSzBjyM/VEZ5fCRlKjI/AAAAAAAAAGY/pDPGv_1tT18B8CNzH8hEXLYoA1fYhwXtgCPcB/s1600/4656307_023cf425e1.gif'/><br><a href='http://www.neetgov.in/ap-apsbtet-results'>AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></h3>
+  </div>
+
+  <div class="col-sm-8">
               <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- school9edu_main_Blog1_1x1_as -->
             <ins class="adsbygoogle"
@@ -24,6 +28,9 @@
             <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
+  </div>
+  <div class="col-sm-2"><h3 class="text-center"><img border='0' src='https://4.bp.blogspot.com/-_LyKpSzBjyM/VEZ5fCRlKjI/AAAAAAAAAGY/pDPGv_1tT18B8CNzH8hEXLYoA1fYhwXtgCPcB/s1600/4656307_023cf425e1.gif'/><br><a href='http://www.neetgov.in/ts-tssbtet-results'>TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></h3>
+  </div>
     </div> 
 
   
