--- a/app/views/blogs/ecettips.html.erb
+++ b/app/views/blogs/ecettips.html.erb
@@ -6,6 +6,20 @@ div.double {border-style: double;}
 
 <div class="container double">
 
+<br>
+<div class="social-share">
+    <h4>Share on</h4>
+    
+            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ap-apsbtet-results" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-twitter"></i><span> Twitter</span></a>
+       
+            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ecet-syllabus-weightage-marks-tips& t=Tips for Ecet 2017 Examination" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-facebook"></i><span> Facebook</span></a>
+
+            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ecet-syllabus-weightage-marks-tips"  class="google-plus" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-google-plus"></i><span> Google+</span></a>
+
+            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ecet-syllabus-weightage-marks-tips" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
+</div><!-- /.social-share -->
+<br>
+
 	
   <div class="text-justify">
   <div class="text-center" '><br>
@@ -71,7 +85,7 @@ Working stress method of design: Basic principles, neutral axis, lever arm-Desig
 <br>
 <b>ANNEXURE II<br>
 Number of Questions to be set</b>
-<table class="table table-bordered">
+<table class="table table-bordered table-hover">
 <tr>
 	<th>CIVIL ENGINEERING UNIT NO</th>
 	<th>TOPICS</th>
@@ -160,7 +174,7 @@ Automobile Chassis construction, Function of transmission system, Gear boxes, si
 <br>
 <b>ANNEXURE II<br>
 Number of Questions to be set</b>
-<table class="table table-bordered">
+<table class="table table-bordered table-hover">
 <tr>
 	<th>MECHANICAL ENGINEERING UNIT NO</th>
 	<th>TOPICS</th>
@@ -252,7 +266,7 @@ Number of Questions to be set</b>
     <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:140px'></ins>
       <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 </div>
-<table class="table table-bordered">
+<table class="table table-bordered table-hover">
 <tr>
 	<th class="col-sm-4">COMPUTER SCIENCE & ENGINEERING<br>UNIT NO</th>
 	<th>TOPICS</th>
@@ -325,8 +339,8 @@ Number of Questions to be set</b>
                 <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
-<b><h2 class="text-center text-success">ELECTRONICS AND COMMUNICATION ENGINEERING</h2><br>
- ANNEXURE I</b><br>
+<h2 class="text-center text-success">ELECTRONICS AND COMMUNICATION ENGINEERING</h2><br>
+<b> ANNEXURE I</b><br>
 
 <b>1. ELECTRONIC DEVICES AND CIRCUITS:</b> Semiconductor diodes – varactor diode – zener diode – Clippers and clampers-Transistors– FETs – UJT (characteristics only) – Power supplies – Rectifiers and Filters – HW, FW and Bridge type – RC , LC and CLC filters – Series and Shunt regulators – Transistor amplifiers – CE,CC and CB configurations – Biasing techniques-RC coupled – Transformer coupled amplifiers Differential amplifiers – Feedback, Power and Tuned amplifiers – Operational amplifiers – characteristics and applications – RC , LC and Crystal oscillators – Astable , Bistable and Monostable Multivibrators using Transistors and 555 timers- Schmitt Trigger – Sweep circuits – Miller and Bootstrap circuits.<br>
 <b>2. CIRCUIT THEORY:</b> Mesh current and Node voltage analysis – Crammer’s Rule – Network theorems – Thevenin’s, Norton’s, Maximum Power transfer, Superposition and Reciprocity theorems– Series and Parallel Resonance – Q- factor – Selectivity – Bandwidth – Linear wave shaping circuits. Transmission Lines – Characteristic Impedance –Reflection Coefficient – SWR – Transmission Line losses and Impedance matching.<br>
@@ -345,7 +359,7 @@ Analog Instruments – Extension of range of Ammeter, Voltmeter and Ohmmeter –
 Number of Questions to be Set Unit Wise<br>
 
 <br>
-<table class="table table-bordered">
+<table class="table table-bordered table-hover ">
 <tr>
 	<th class="col-sm-4">ELECTRONICS AND COMMUNICATION ENGINEERING<br>UNIT NO</th>
 	<th>TOPICS</th>
@@ -353,65 +367,54 @@ Number of Questions to be Set Unit Wise<br>
 </tr>
 <tr>
 	<td>I</td>
-	<td>ELECTRONIC DEVICES AND CIRCUITS</td>
+	<td>Electronic devises and circuts</td>
 	<td>15</td>
 </tr>
 <tr>
 	<td>II</td>
-	<td>CIRCUIT THEORY</td>
+	<td>Circut theory</td>
 	<td>08</td>
 </tr>
 <tr>
 	<td>III</td>
-	<td>ELECTRONIC MEASURING INSTRUMENTS</td>
+	<td>Electronic measuring instruments</td>
 	<td>06</td>
 </tr>
 <tr>
 	<td>IV</td>
-	<td>INDUSTRIAL ELECTRONICS</td>
+	<td>Industrial Electronics</td>
 	<td>05</td>
 </tr>
 <tr>
 	<td>V</td>
-	<td>COMMUNICATION SYSTEMS</td>
+	<td>Communication systems</td>
 	<td>10</td>
 </tr>
 <tr>
 	<td>VI</td>
-	<td>ADVANCED COMMUNICATION SYSTEMS</td>
+	<td>Advance comminication systems</td>
 	<td>15</td>
 </tr>
 <tr>
 	<td>VII</td>
-	<td>DIGITAL ELECTRONICS</td>
+	<td>Digital Electronics</td>
 	<td>10</td>
 </tr>
 <tr>
 	<td>VIII</td>
-	<td>MICROCONTROLLERS AND MICROPROCESSORS</td>
+	<td>Microcontrollers and Microprocessors</td>
 	<td>10</td>
 </tr>
 <tr>
 	<td>IX</td>
-	<td>CONSUMER ELECTRONICS AND ELECTRONIC PRODUCT DESIGN</td>
+	<td> Consumer Electronics and Electronic Product Design</td>
 	<td>05</td>
 </tr>
 
 <tr>
 	<td>X</td>
-	<td>DATA COMMUNICATIONS AND COMPUTER NETWORKS</td>
-	<td>10</td>
-</tr>
-<tr>
-	<td>XI</td>
-	<td>EMBEDDED SYSTEMS AND DIGITAL CIRCUIT DESIGN THROUGH VERILOG HDL</td>
-	<td>05</td>
-</tr>
-
-<tr>
-	<td>XII</td>
-	<td>PROGRAMMING IN C AND COMPUTER HARDWARE</td>
-	<td>04</td>
+	<td> Data Communications</td>
+	<td>07</td>
 </tr>
 <tr>
 	<td colspan="2" >Total</td>
@@ -489,7 +492,7 @@ Indefinite Integral – Standard forms – Integration by decomposition of the i
 Definition of a differential equation-order and degree of a differential equation- formation of differential equations-solution of differential equation of the type first order, first degree, variable-separable, homogeneous equations, exact, linear differential equation of the form 
 dy/dx + Py = Q, Bernoulli’s equation, nth order linear differential equation with constant coefficients both homogeneous and non homogeneous and finding the Particular Integrals for the functions , , ,Sin ax, Cos ax.<br><br>
 <b>ANNEXURE II</b><br>
-<table class="table table-bordered">
+<table class="table table-bordered table-hover">
 <tr>
 	<th class="col-sm-4">Number of Questions to be Set Unit Wise (TOTAL 50)<br>UNIT NO</th>
 	<th>TOPICS</th>
@@ -571,7 +574,7 @@ Expansion of gases-Boyle’s law-Absolute scale of temperature-charle’s laws-I
 Photoelectric effect – explanation and its laws-applications of photoelectric effect (photocell) – critical angle and total internal reflection – optical fibers - principle, working , types and applications-concept of super conductivity – its properties and applications.<br><br>
 <b>ANNEXURE II</b><br>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-hover">
 <tr>
 	<th class="col-sm-4">PHYSICS (TOTAL 25) UNIT NO</th>
 	<th>TOPICS</th>
@@ -638,7 +641,7 @@ Rubber – natural rubber – processing from latex –Vulcanization – Elastom
 <b>10. Environmental chemistry</b> Introduction – environment –understand the terms lithosphere, hydrosphere, atmosphere bio sphere, biotic component, energy component pollutant, receptor, sink, particulate, DO, BOD, Threshold limit value, COD- Air pollution - causes-Effects – acid rain, green house effect –ozone depletion – control of Air pollution – Water pollution – causes – effects – control measures.<br><br> 
 
 <b>ANNEXURE II</b><br>
-<table class="table table-bordered">
+<table class="table table-bordered table-hover">
 <tr>
 	<th class="col-sm-4">CHEMISTRY (TOTAL 25) UNIT NO</th>
 	<th>TOPICS</th>
