--- a/app/views/blogs/ecettips.html.erb
+++ b/app/views/blogs/ecettips.html.erb
@@ -1,4 +1,5 @@
 <% content_for :title, "ECET SYLLABUS WEIGHTAGE MARKS TIPS" %>
+<% content_for :description, "ECET SYLLABUS WEIGHTAGE MARKS TIPS"%>
 <style>
 
 div.double {border-style: double;}
