--- a/app/views/exam/ecetresults.html.erb
+++ b/app/views/exam/ecetresults.html.erb
@@ -1,4 +1,6 @@
 <% content_for :title, "NEET GOV ONLINE EXAMINATION PORTAL" %>
+<% content_for :description, "Neet Gov Providing All india Educations Updates, Notifications, Time tables, Results, Syllabus books, Etc. This Info for Helping Students We Are Providing Accurately for Official Conformation contact college section and higher authorities"%>
+
 <style type="text/css">
 	table {
     table-layout: fixed;
