--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -1,4 +1,6 @@
 <% content_for :title, "AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 - neetgov.in" %>
+
+<% content_for :description, "Ap sbtet results 2017 available soon for c16, c14, c09 April/march sbtet diploma results 2017"%>
 <meta property="og:image" content="assets/AP-SBTET-RESULTS-b899841c9860865de2c3a2aafc22389ae0b97928b91ed27948e78807accf2d20.png"/>
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
