--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -1,4 +1,5 @@
 <% content_for :title, "TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 - www.neetgov.in" %>
+<% content_for :description, "TS sbtet results 2017 available soon for c16, c14, c09 April/march sbtet diploma results 2017"%>
 <meta property="og:image" content="assets/TS-SBTET-RESULTS-018fae034ebb9ffbe2919af6e37507b1908bdd649f6c06a8c15c002bdcdc4cbc.jpg"/>
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
