--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <% content_for :title, "NEET GOV ONLINE EXAMINATION PORTAL REGISTRATION" %>
+<% content_for :description, "Neet Gov Providing All india Educations Updates, Notifications, Time tables, Results, Syllabus books, Etc. This Info for Helping Students We Are Providing Accurately for Official Conformation contact college section and higher authorities"%>
 <div class="container">
 
 <div class="row text-center">
