--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for :title, "NEET GOV ONLINE EXAMINATION PORTAL" %>
+<% content_for :description, "Neet Gov Providing All india Educations Updates, Notifications, Time tables, Results, Syllabus books, Etc. This Info for Helping Students We Are Providing Accurately for Official Conformation contact college section and higher authorities"%>
  <div class="container">
          <!--  <% if notice %>
                   <div class="alert alert-success alert-dismissible" role="alert">
