--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for :title, "NEET GOV ONLINE EXAMINATION PORTAL" %>
+<% content_for :description, "Neet Gov Providing All india Educations Updates, Notifications, Time tables, Results, Syllabus books, Etc. This Info for Helping Students We Are Providing Accurately for Official Conformation contact college section and higher authorities"%>
 <div class="container">
 <% if notice %>
         <div class="alert alert-success alert-dismissible" role="alert">
@@ -13,6 +14,7 @@
         </div>
 <% end %>
 <h3 class="text-center"><a href='http://www.neetgov.in/ecet-syllabus-weightage-marks-tips'>ECET SYLLABUS WEIGHTAGE MARKS TIPS CLICK HERE</a><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3>
+
   <div class="row text-center">
   <div class="col-sm-2"><h3 class="text-center"><img border='0' src='https://4.bp.blogspot.com/-_LyKpSzBjyM/VEZ5fCRlKjI/AAAAAAAAAGY/pDPGv_1tT18B8CNzH8hEXLYoA1fYhwXtgCPcB/s1600/4656307_023cf425e1.gif'/><br><a href='http://www.neetgov.in/ap-apsbtet-results'>AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></h3>
   </div>
