--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
   <%= csrf_meta_tags %>
 
   <meta charset="utf-8" name="Ap sbtet results,Ap Sbtet diploma results,Apsbtet results 2017,Manabadi sbtet results,Ap sbtet 2017 results,Ap Sbtet results,Ap Sbtet results 2017 c14,Ap Sbtet results 2017 c16,Ap Sbtet results 2017,Ap Sbtet results,sbtet results,Sbtet ap results,Ap sbtet results,Ts Sbtet diploma results,Tssbtet results 2017,Manabadi sbtet results,Ts sbtet 2017 results,Ts Sbtet results,Ts Sbtet results 2017 c14,Ts Sbtet results 2017 c16,Ts Sbtet results 2017,Ts Sbtet results, TS SBTET, AP SBTET, SBTET">
-<meta name="description" content="Neet Gov Providing All india Educations Updates, Notifications, Time tables, Results, Syllabus books, Etc. This Info for Helping Students We Are Providing Accurately for Official Conformation contact college section and higher authorities">
+<meta name='description' content=<%= yield(:description) %> >
+
+
+<meta property="article:published_time" content=<%= Time.now %> />
+<meta property="article:modified_time" content=<%= Time.now %> />
+<meta name="robots" content="all">
+<meta name="googlebot" content="index, follow">
+<meta name="robots" content="index, follow">
+
 
   <meta name="google-site-verification" content="Hkjj2HdvwtIjG9-vQXd3hQMfGgJ7STiY9OCTwIbg2uc" />
 
