--- a/app/views/blogs/question_paper.html.erb
+++ b/app/views/blogs/question_paper.html.erb
@@ -9,7 +9,9 @@ var t = setInterval(function () {
 }, blink_speed);
 
 </script>
-<div class="container" style="padding-left:13%px;padding-right:13%px;">
+ <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
+
+ <div class="panel" style="padding-left: 8%; padding-right: 8%; padding-top:5%; padding-bottom: 5%">
 
 <br>
 <div class="social-share">
@@ -27,6 +29,7 @@ var t = setInterval(function () {
 <br><br>
 
 <div class="text-center" '>
+<h1>AP ECET 2017 QUESTIONS PAPERS</h1>
 <h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div>
 <br>
 
@@ -38,17 +41,10 @@ var t = setInterval(function () {
   IMPORTANT NOTICE:</b> <br><br>The students can download the question papers and Preliminary Keys from 2.00 pm onwards on 4.5.2017. The response sheets (answer papers) also can be downloaded by the students. Any objections on Preliminary keys shall be submitted only in the format given to the mail apecet2017keyobjections@gmail.com on or before 6.5.2017 5.00 pm.</p>
 </h3><br>
 <div class="text-center">
- <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <!-- school9edu_main_Blog1_1x1_as -->
-                    <ins class="adsbygoogle"
-                         style="display:block"
-                         data-ad-client="ca-pub-7665698555914778"
-                         data-ad-slot="9074553645"
-                         data-ad-format="auto"></ins>
-                    <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-<a href="http://sche.ap.gov.in/ECET/ECET/ECET_HomePage.aspx"><h4>Download the question papers and Preliminary Keys</h4></a>
+ 
+<div class="row">
+<b>
+<a href="http://sche.ap.gov.in/ECET/ECET/ECET_EXAM_PAPER.aspx">Download Question papers</a></b><br>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
@@ -59,54 +55,35 @@ var t = setInterval(function () {
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
+
+<b><a href="http://sche.ap.gov.in/ECET/ECET/ECET_KEY.aspx">Download Preliminary Keys</a></b><br>
+<script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- school9edu_main_Blog1_1x1_as -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-7665698555914778"
+                         data-ad-slot="9074553645"
+                         data-ad-format="auto"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+<b><a href="http://sche.ap.gov.in/ECET/PDF/APECET_ObjectionsFormat.pdf">Objections Format</a></b>
+
 </div>
-<br><br>
-<div class="row">
-<div class="col-sm-6">
-<h4 class="text-success">AP</h4><br>
- The Following Examinations Results are released by SBTET AP:<br>
-      <b>AP SBTET Diploma C-16 Examinations Mar / Apr 2017</b><br>
-      sbtet results c16 1st year<br>
-      <b>AP SBTET Diploma C-14 Examinations Mar / Apr 2017</b><br>
-      sbtet results c14 1st year<br>
-      sbtet results c14 3rd sem<br>
-      sbtet results c14 4th sem<br>
-      sbtet results c14 5th sem<br>
-      sbtet results c14 6th sem<br>
-      <b>AP SBTET Diploma C-14 Examinations Mar / Apr 2017</b><br>
-      sbtet results c09 1st year<br>
-       sbtet results c09 3rd sem<br>
-      sbtet results c09 4th sem<br>
-      sbtet results c09 5th sem<br>
-      sbtet results c09 6th sem<br>
-      sbtet results c09 7th sem<br>
-      <b>AP SBTET Diploma ER-91 Pharmacy Examinations Mar / Apr 2017</b><br>
-      sbtet results ER-91 Pharmacy 1st year<br>
-      sbtet results ER-91 Pharmacy 2nd year<br>
-</div>
-<div class="col-sm-6">
-<h4 class="text-success">TS</h4><br>
-	The Following Examinations Results are released by SBTET TS: <br>
-      <b>TS SBTET Diploma C-14 Examinations Mar / Apr 2017</b><br>
-      sbtet results c16 1st year<br>
-      <b>TS SBTET Diploma C-14 Examinations Mar / Apr 2017</b><br>
-      sbtet results c14 1st year<br>
-      sbtet results c14 3rd sem<br>
-      sbtet results c14 4th sem<br>
-      sbtet results c14 5th sem<br>
-      sbtet results c14 6th sem<br>
-      <b>TS SBTET Diploma C-14 Examinations Mar / Apr 2017</b><br>
-      sbtet results c09 1st year<br>
-       sbtet results c09 3rd sem<br>
-      sbtet results c09 4th sem<br>
-      sbtet results c09 5th sem<br>
-      sbtet results c09 6th sem<br>
-      sbtet results c09 7th sem<br>
-      <b>TS SBTET Diploma ER-91 Pharmacy Examinations Mar / Apr 2017</b><br>
-      sbtet results ER-91 Pharmacy 1st year<br>
-      sbtet results ER-91 Pharmacy 2nd year<br>
-<br>,<br>
-</div>
-</div>
+<br><br><hr>
+<h3><a href="ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3>
+<script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- school9edu_main_Blog1_1x1_as -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-7665698555914778"
+                         data-ad-slot="9074553645"
+                         data-ad-format="auto"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+ <h3><a href="ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3><br>
+  </div>
+  </div>
   </div>
   </div>
