--- a/app/views/blogs/question_paper.html.erb
+++ b/app/views/blogs/question_paper.html.erb
@@ -71,7 +71,7 @@ var t = setInterval(function () {
 
 </div>
 <br><br><hr>
-<h3><a href="ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3>
+<h3><a href="ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
