ap-emacet results

--- a/app/views/blogs/ap_eamcet_results.html.erb
+++ b/app/views/blogs/ap_eamcet_results.html.erb
@@ -51,6 +51,7 @@ var t = setInterval(function () {
 <p><b>AP EAMCET:</b> A Common Entrance Test, designated as Engineering, Agriculture and Medical Common Entrance Test – 2017 (AP EAMCET-2017) of Andhra Pradesh will be conducted through computer based test by Jawaharlal Nehru Technological University Kakinada for entry into the first year of the following professional courses offered for the academic year 2017 – 2018 in the State of Andhra pradesh.</p>
 <br>
 <p><b>AP EAMCET RESULTS 2017:</b> The results for the Andhra Pradesh Engineering, Agriculture and Medical Common Entrance Test (EAMCET) 2017 Will be declared soon May 5th Andhra Pradesh EAMCET 2017 Exam Results Available @ 03.00PM. Candidates who appeared for the engineering test can check there results here: AP EAMCET Results 2017.</p>
+<br>
 
 <h4 class="text-center">Check Below Link For Information AP EAMCET 2017</h4>
 
@@ -68,15 +69,21 @@ var t = setInterval(function () {
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
 <br><br>
-<div class="text-center text-success"><h2>
-<p>AP EAMCET RESULTS 2017</p>
-<p>EAMCET RESULTS 2017</p>
-<p>ANDHRA PRADESH EAMCET RESULTS 2017</p>
-<p>MANABADI EAMCET RESULTS 2017</p>
-<p>EAMCET 2017 RESULTS</p>
-<p>EAMCET RESULTS 2017 AP</p>
-<p>AP EAMCET RANK CARDS</p>
-</h2>
+<div class="row">
+<div class="col-sm-3"></div>
+<div class=" col-sm-8 text-success">
+<h2>
+<ul>
+	<li>ap eamcet results 2017</li>
+	<li>eamcet results 2017</li>
+	<li>andhra pradesh eamcet results 2017</li>
+	<li>manabadi eamcet results 2017</li>
+	<li>eamcet 2017 results</li>
+	<li>eamcet results 2017 ap</li>
+	<li>ap eamcet rank cards</li>
+</ul></h2>
+
+</div>
 </div>
 
 </div>
