ap-emacet results

--- a/app/views/blogs/ap_eamcet_results.html.erb
+++ b/app/views/blogs/ap_eamcet_results.html.erb
@@ -1,14 +1,6 @@
 <% content_for :title, "AP EAMCET RESULTS 2017 | MANABADI @ sche.ap.gov.in" %>
-<% content_for :description, "AP EAMCET RESULTS 2017 | MANABADI @ sche.ap.gov.in"%>
+<% content_for :description, "AP-EAMCET-RESULTS-2017 | MANABADI @ sche.ap.gov.in"%>
 
-<script type="text/javascript">
-	var blink_speed = 500;
-var t = setInterval(function () {
-    var ele = document.getElementById('blinker');
-    ele.style.visibility = (ele.style.visibility == 'hidden' ? '' : 'hidden');
-}, blink_speed);
-
-</script>
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
  <div class="panel" style="padding-left: 8%; padding-right: 8%; padding-top:5%; padding-bottom: 5%">
@@ -19,7 +11,7 @@ var t = setInterval(function () {
     
             <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ap-eamcet-results-2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-twitter"></i><span> Twitter</span></a>
        
-            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ap-eamcet-results-2017& t=AP EAMCET RESULTS 2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-facebook"></i><span> Facebook</span></a>
+            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ap-eamcet-results-2017& t=AP-EAMCET-RESULTS-2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-facebook"></i><span> Facebook</span></a>
 
             <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ap-eamcet-results-2017"  class="google-plus" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-google-plus"></i><span> Google+</span></a>
 
