--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  <meta charset="utf-8" name="Ap sbtet results,Ap Sbtet diploma results,Apsbtet results 2017,Manabadi sbtet results,Ap sbtet 2017 results,Ap Sbtet results,Ap Sbtet results 2017 c14,Ap Sbtet results 2017 c16,Ap Sbtet results 2017,Ap Sbtet results,sbtet results,Sbtet ap results,Ap sbtet results,Ts Sbtet diploma results,Tssbtet results 2017,Manabadi sbtet results,Ts sbtet 2017 results,Ts Sbtet results,Ts Sbtet results 2017 c14,Ts Sbtet results 2017 c16,Ts Sbtet results 2017,Ts Sbtet results, TS SBTET, AP SBTET, SBTET">
+  <meta name="keywords" name="Ap sbtet results,Ap Sbtet diploma results,Apsbtet results 2017,Manabadi sbtet results,Ap sbtet 2017 results,Ap Sbtet results,Ap Sbtet results 2017 c14,Ap Sbtet results 2017 c16,Ap Sbtet results 2017,Ap Sbtet results,sbtet results,Sbtet ap results,Ap sbtet results,Ts Sbtet diploma results,Tssbtet results 2017,Manabadi sbtet results,Ts sbtet 2017 results,Ts Sbtet results,Ts Sbtet results 2017 c14,Ts Sbtet results 2017 c16,Ts Sbtet results 2017,Ts Sbtet results, TS SBTET, AP SBTET, SBTET">
 <meta name='description' content=<%= yield(:description) %> >
 
 
