ap-emacet results

--- a/app/views/blogs/ap_eamcet_results.html.erb
+++ b/app/views/blogs/ap_eamcet_results.html.erb
@@ -48,7 +48,7 @@
 <h4 class="text-center">Check Below Link For Information AP EAMCET 2017</h4>
 
 
-<a href="/ap-eamcet-results-2017"><h4 class="text-center">AP EAMCET 2017 RESULTS</h4></a>
+<a href="http://schools9.com/andhra/2016/eamcet/andhra-pradesh-eamcet-results-2016-0305.htm" target="_blank"><h4 class="text-center">AP EAMCET 2017 RESULTS</h4></a>
 
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
