--- a/app/views/blogs/ts_polycet_results.html.erb
+++ b/app/views/blogs/ts_polycet_results.html.erb
@@ -42,13 +42,13 @@
 
 <p><b>TS POLYCET:</b> A Common Entrance Test, designated as Diploma/ POlytechnic Common Entrance Test – 2017 (Ceep-2017) of Telangana will be conducted a exam for entry into the first year of the following diploma and other professional courses offered for the academic year 2017 – 2018 in the State of Telangana.</p>
 <br>
-<p><b>TS POLYCET RESULTS 2017:</b> The results for the Telangana Diploma Engineering and other non Engineering Common Entrance Test (POLYCET) 2017 Will be declared soon May 6th Telangana POLYCET 2017 Exam Results Available @ 12.00PM. Candidates who appeared for the Diploma/polytechnic engineering test can check there results here: TS POLYCET Results 2017.</p>
+<p><b>TS POLYCET RESULTS 2017:</b> The results for the Telangana Diploma Engineering and other non Engineering Common Entrance Test (POLYCET) 2017 Will be declared soon May 6th Telangana POLYCET 2017 Exam Results Available NOW. Candidates who appeared for the Diploma/polytechnic engineering test can check there results here: TS POLYCET Results 2017.</p>
 <br>
 
 <h4 class="text-center">Check Below Link For Information TS POLYCET 2017</h4>
 
 
-<a href="http://www.results.manabadi.co.in/2017/andhra-pradesh/eamcet/andhra-pradesh-eamcet-results-2017-0705.htm" target="_blank"><h4 class="text-center">TS POLYCET 2017 RESULTS</h4></a>
+<a href="http://www.results.manabadi.co.in/2017/telangana/polycet/telangana-polycet-results-2017-0505.htm⁠⁠⁠⁠" target="_blank"><h4 class="text-center">TS POLYCET 2017 RESULTS</h4></a>
 
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
