--- a/app/views/blogs/ts_polycet_results.html.erb
+++ b/app/views/blogs/ts_polycet_results.html.erb
@@ -47,8 +47,8 @@
 
 <h4 class="text-center">Check Below Link For Information TS POLYCET 2017</h4>
 
-
-<a href="http://www.results.manabadi.co.in/2017/telangana/polycet/telangana-polycet-results-2017-0505.htm⁠⁠⁠⁠" target="_blank"><h4 class="text-center">TS POLYCET 2017 RESULTS</h4></a>
+<h4 class="text-center">
+<a href="http://www.results.manabadi.co.in/2017/telangana/polycet/telangana-polycet-results-2017-0505.htm" target="_blank">TS POLYCET 2017 RESULTS</a></h4>
 
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
